--- a/src/main/resources/view/screen_main.fxml
+++ b/src/main/resources/view/screen_main.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
@@ -17,15 +18,7 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<BorderPane
-        maxHeight="-Infinity"
-        maxWidth="-Infinity"
-        minHeight="-Infinity"
-        minWidth="-Infinity"
-        prefHeight="653.0"
-        prefWidth="943.0"
-        fx:controller="main.java.controllers.MainScreen"
-        xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="653.0" prefWidth="943.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.java.controllers.MainScreen">
    <top>
       <MenuBar BorderPane.alignment="CENTER">
         <menus>
@@ -66,8 +59,8 @@
          <children>
             <GridPane>
               <columnConstraints>
-                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="120.0" minWidth="100.0" prefWidth="100.0" />
-                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="120.0" minWidth="100.0" prefWidth="100.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="140.0" minWidth="100.0" prefWidth="100.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="140.0" minWidth="100.0" prefWidth="100.0" />
                 <ColumnConstraints hgrow="SOMETIMES" maxWidth="120.0" minWidth="120.0" prefWidth="120.0" />
                   <ColumnConstraints hgrow="SOMETIMES" maxWidth="100.0" minWidth="100.0" prefWidth="100.0" />
                   <ColumnConstraints hgrow="SOMETIMES" maxWidth="100.0" minWidth="100.0" prefWidth="100.0" />
@@ -77,36 +70,6 @@
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                  <BorderPane prefHeight="200.0" prefWidth="200.0">
-                     <bottom>
-                        <Label text="Dodaj datoteke..." BorderPane.alignment="CENTER" />
-                     </bottom>
-                     <center>
-                        <ImageView accessibleRole="BUTTON" fitHeight="60.0" fitWidth="60.0" BorderPane.alignment="CENTER">
-                           <image>
-                              <Image url="@../images/Add%20files.png" />
-                           </image>
-                        </ImageView>
-                     </center>
-                     <padding>
-                        <Insets bottom="11.0" />
-                     </padding>
-                  </BorderPane>
-                  <BorderPane prefHeight="79.0" prefWidth="129.0" GridPane.columnIndex="1">
-                     <bottom>
-                        <Label text="Dodaj direktorijum..." BorderPane.alignment="CENTER" />
-                     </bottom>
-                     <center>
-                        <ImageView accessibleRole="BUTTON" fitHeight="60.0" fitWidth="60.0" BorderPane.alignment="CENTER">
-                           <image>
-                              <Image url="@../images/Add%20folder.png" />
-                           </image>
-                        </ImageView>
-                     </center>
-                     <padding>
-                        <Insets bottom="11.0" />
-                     </padding>
-                  </BorderPane>
                   <GridPane GridPane.columnIndex="2">
                     <columnConstraints>
                       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -140,36 +103,6 @@
                         <Insets bottom="11.0" />
                      </padding>
                   </GridPane>
-                  <BorderPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="3">
-                     <bottom>
-                        <Label text="Pokreni" BorderPane.alignment="CENTER" />
-                     </bottom>
-                     <center>
-                        <ImageView accessibleRole="BUTTON" fitHeight="60.0" fitWidth="60.0" BorderPane.alignment="CENTER">
-                           <image>
-                              <Image url="@../images/PlayPause.png" />
-                           </image>
-                        </ImageView>
-                     </center>
-                     <padding>
-                        <Insets bottom="11.0" />
-                     </padding>
-                  </BorderPane>
-                  <BorderPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="4">
-                     <bottom>
-                        <Label text="Zaustavi" BorderPane.alignment="CENTER" />
-                     </bottom>
-                     <center>
-                        <ImageView accessibleRole="BUTTON" fitHeight="60.0" fitWidth="60.0" BorderPane.alignment="CENTER">
-                           <image>
-                              <Image url="@../images/Stop.png" />
-                           </image>
-                        </ImageView>
-                     </center>
-                     <padding>
-                        <Insets bottom="11.0" />
-                     </padding>
-                  </BorderPane>
                   <BorderPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="5">
                      <top>
                         <Label text="Konzola:" BorderPane.alignment="CENTER_LEFT" />
@@ -181,10 +114,42 @@
                         <Insets bottom="5.0" />
                      </padding>
                   </BorderPane>
+                  <Button contentDisplay="TOP" mnemonicParsing="false" prefHeight="50.0" prefWidth="130.0" text="Dodaj datoteke..." GridPane.halignment="CENTER" GridPane.valignment="CENTER">
+                     <graphic>
+                        <ImageView fitHeight="60.0" fitWidth="60.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../images/Add%20files.png" />
+                           </image></ImageView>
+                     </graphic>
+                  </Button>
+                  <Button contentDisplay="TOP" mnemonicParsing="false" prefHeight="50.0" prefWidth="130.0" text="Dodaj direktorijum..." GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
+                     <graphic>
+                        <ImageView fitHeight="60.0" fitWidth="60.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../images/Add%20folder.png" />
+                           </image>
+                        </ImageView>
+                     </graphic>
+                  </Button>
+                  <Button contentDisplay="TOP" mnemonicParsing="false" prefHeight="48.0" prefWidth="95.0" text="Pokreni" GridPane.columnIndex="3" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
+                     <graphic>
+                        <ImageView fitHeight="60.0" fitWidth="60.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../images/PlayPause.png" />
+                           </image>
+                        </ImageView>
+                     </graphic>
+                  </Button>
+                  <Button contentDisplay="TOP" disable="true" mnemonicParsing="false" prefHeight="52.0" prefWidth="94.0" text="Zaustavi" GridPane.columnIndex="4" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
+                     <graphic>
+                        <ImageView fitHeight="60.0" fitWidth="60.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../images/Stop.png" />
+                           </image>
+                        </ImageView>
+                     </graphic>
+                  </Button>
                </children>
-               <padding>
-                  <Insets top="10.0" />
-               </padding>
             </GridPane>
             <TableView prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="1">
               <columns>
