--- a/src/main/resources/view/screen_main.fxml
+++ b/src/main/resources/view/screen_main.fxml
@@ -41,7 +41,7 @@
       </MenuBar>
    </top>
    <bottom>
-      <ProgressBar prefHeight="34.0" prefWidth="561.0" progress="0.0" BorderPane.alignment="CENTER">
+      <ProgressBar maxHeight="80.0" maxWidth="561.0" minHeight="80.0" minWidth="561.0" prefHeight="80.0" prefWidth="561.0" progress="0.0" BorderPane.alignment="CENTER">
          <padding>
             <Insets bottom="30.0" top="30.0" />
          </padding>
@@ -53,7 +53,7 @@
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
         </columnConstraints>
         <rowConstraints>
-          <RowConstraints minHeight="10.0" percentHeight="20.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="110.0" minHeight="110.0" prefHeight="110.0" vgrow="SOMETIMES" />
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
@@ -61,7 +61,7 @@
               <columnConstraints>
                   <ColumnConstraints hgrow="SOMETIMES" maxWidth="140.0" minWidth="100.0" prefWidth="100.0" />
                   <ColumnConstraints hgrow="SOMETIMES" maxWidth="140.0" minWidth="100.0" prefWidth="100.0" />
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="120.0" minWidth="120.0" prefWidth="120.0" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="120.0" minWidth="100.0" prefWidth="100.0" />
                   <ColumnConstraints hgrow="SOMETIMES" maxWidth="100.0" minWidth="100.0" prefWidth="100.0" />
                   <ColumnConstraints hgrow="SOMETIMES" maxWidth="100.0" minWidth="100.0" prefWidth="100.0" />
                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -70,7 +70,7 @@
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                  <GridPane GridPane.columnIndex="2">
+                  <GridPane nodeOrientation="LEFT_TO_RIGHT" GridPane.columnIndex="2" GridPane.halignment="LEFT" GridPane.valignment="CENTER">
                     <columnConstraints>
                       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                     </columnConstraints>
@@ -80,19 +80,19 @@
                       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                     </rowConstraints>
                      <children>
-                        <Label text="Odaberite jezik:">
+                        <Label text="Odaberite jezik:" GridPane.halignment="LEFT" GridPane.valignment="CENTER">
                            <GridPane.margin>
-                              <Insets left="30.0" />
+                              <Insets left="15.0" />
                            </GridPane.margin>
                         </Label>
                         <RadioButton mnemonicParsing="false" text="Ćirilica" GridPane.rowIndex="1">
                            <GridPane.margin>
-                              <Insets left="30.0" />
+                              <Insets left="15.0" />
                            </GridPane.margin>
                         </RadioButton>
                         <RadioButton mnemonicParsing="false" text="Latinica" GridPane.rowIndex="2">
                            <GridPane.margin>
-                              <Insets left="30.0" />
+                              <Insets left="15.0" />
                            </GridPane.margin>
                         </RadioButton>
                      </children>
@@ -102,16 +102,19 @@
                      <padding>
                         <Insets bottom="11.0" />
                      </padding>
+                     <GridPane.margin>
+                        <Insets />
+                     </GridPane.margin>
                   </GridPane>
                   <BorderPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="5">
                      <top>
                         <Label text="Konzola:" BorderPane.alignment="CENTER_LEFT" />
                      </top>
                      <center>
-                        <TextArea prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER" />
+                        <TextArea editable="false" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER" />
                      </center>
                      <padding>
-                        <Insets bottom="5.0" />
+                        <Insets bottom="5.0" left="15.0" right="5.0" />
                      </padding>
                   </BorderPane>
                   <Button contentDisplay="TOP" mnemonicParsing="false" prefHeight="50.0" prefWidth="130.0" text="Dodaj datoteke..." GridPane.halignment="CENTER" GridPane.valignment="CENTER">
