--- a/src/main/resources/view/screen_main.fxml
+++ b/src/main/resources/view/screen_main.fxml
@@ -57,15 +57,15 @@
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
         </columnConstraints>
         <rowConstraints>
-          <RowConstraints maxHeight="110.0" minHeight="110.0" prefHeight="110.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="136.0" minHeight="109.0" prefHeight="126.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="422.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
             <GridPane>
               <columnConstraints>
-                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="140.0" minWidth="100.0" prefWidth="100.0" />
-                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="140.0" minWidth="100.0" prefWidth="100.0" />
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="120.0" minWidth="100.0" prefWidth="100.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="170.0" minWidth="100.0" prefWidth="100.0" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="110.0" minWidth="100.0" prefWidth="100.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="100.0" minWidth="100.0" prefWidth="100.0" />
                   <ColumnConstraints hgrow="SOMETIMES" maxWidth="100.0" minWidth="100.0" prefWidth="100.0" />
                   <ColumnConstraints hgrow="SOMETIMES" maxWidth="100.0" minWidth="100.0" prefWidth="100.0" />
                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -74,7 +74,7 @@
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                  <GridPane nodeOrientation="LEFT_TO_RIGHT" GridPane.columnIndex="2" GridPane.halignment="LEFT" GridPane.valignment="CENTER">
+                  <GridPane nodeOrientation="LEFT_TO_RIGHT" GridPane.columnIndex="1" GridPane.halignment="LEFT" GridPane.valignment="CENTER">
                     <columnConstraints>
                       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                     </columnConstraints>
@@ -85,10 +85,10 @@
                      <children>
                         <Label text="Odaberite jezik:" GridPane.halignment="LEFT" GridPane.valignment="CENTER">
                            <GridPane.margin>
-                              <Insets left="15.0" />
+                              <Insets left="10.0" top="2.0" />
                            </GridPane.margin>
                         </Label>
-                        <VBox alignment="CENTER_LEFT" prefHeight="200.0" prefWidth="100.0" spacing="10.0" GridPane.rowIndex="1">
+                        <VBox prefHeight="200.0" prefWidth="100.0" spacing="5.0" GridPane.rowIndex="1">
                            <children>
                               <RadioButton fx:id="cyrillicRadioButton" mnemonicParsing="false" selected="true" text="Ćirilica">
                                  <toggleGroup>
@@ -98,8 +98,11 @@
                               <RadioButton mnemonicParsing="false" text="Latinica" toggleGroup="$lang" />
                            </children>
                            <GridPane.margin>
-                              <Insets left="15.0" />
+                              <Insets left="10.0" />
                            </GridPane.margin>
+                           <padding>
+                              <Insets top="2.0" />
+                           </padding>
                         </VBox>
                      </children>
                      <opaqueInsets>
@@ -127,23 +130,6 @@
                         </ScrollPane>
                      </center>
                   </BorderPane>
-                  <Button fx:id="openFiles" contentDisplay="TOP" mnemonicParsing="false" onAction="#openFiles" prefHeight="50.0" prefWidth="130.0" text="Dodaj datoteke..." GridPane.halignment="CENTER" GridPane.valignment="CENTER">
-                     <graphic>
-                        <ImageView fitHeight="60.0" fitWidth="60.0" pickOnBounds="true" preserveRatio="true">
-                           <image>
-                              <Image url="@../images/Add%20files.png" />
-                           </image></ImageView>
-                     </graphic>
-                  </Button>
-                  <Button contentDisplay="TOP" mnemonicParsing="false" onAction="#openFolder" prefHeight="50.0" prefWidth="130.0" text="Dodaj direktorijum..." GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
-                     <graphic>
-                        <ImageView fitHeight="60.0" fitWidth="60.0" pickOnBounds="true" preserveRatio="true">
-                           <image>
-                              <Image url="@../images/Add%20folder.png" />
-                           </image>
-                        </ImageView>
-                     </graphic>
-                  </Button>
                   <Button contentDisplay="TOP" mnemonicParsing="false" onAction="#start" prefHeight="48.0" prefWidth="95.0" text="Pokreni" GridPane.columnIndex="3" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
                      <graphic>
                         <ImageView fitHeight="60.0" fitWidth="60.0" pickOnBounds="true" preserveRatio="true">
@@ -158,6 +144,45 @@
                         <ImageView fitHeight="60.0" fitWidth="60.0" pickOnBounds="true" preserveRatio="true">
                            <image>
                               <Image url="@../images/Stop.png" />
+                           </image>
+                        </ImageView>
+                     </graphic>
+                  </Button>
+                  <GridPane prefHeight="127.0" prefWidth="256.0">
+                    <columnConstraints>
+                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                    </columnConstraints>
+                    <rowConstraints>
+                      <RowConstraints minHeight="10.0" percentHeight="30.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                    </rowConstraints>
+                     <children>
+                        <VBox prefHeight="79.0" prefWidth="265.0" spacing="5.0" GridPane.rowIndex="1">
+                           <children>
+                              <RadioButton mnemonicParsing="false" selected="true" text="Artist - Year - Title">
+                                 <toggleGroup>
+                                    <ToggleGroup fx:id="pattern" />
+                                 </toggleGroup></RadioButton>
+                              <RadioButton mnemonicParsing="false" text="Artist - Live - Year - Title" toggleGroup="$pattern" />
+                              <RadioButton mnemonicParsing="false" text="Artist - Title" toggleGroup="$pattern" />
+                              <RadioButton mnemonicParsing="false" text="Title" toggleGroup="$pattern" />
+                           </children>
+                           <GridPane.margin>
+                              <Insets left="10.0" />
+                           </GridPane.margin>
+                        </VBox>
+                        <Label text="Odaberite patern:" GridPane.halignment="LEFT" GridPane.valignment="CENTER">
+                           <GridPane.margin>
+                              <Insets left="10.0" />
+                           </GridPane.margin>
+                        </Label>
+                     </children>
+                  </GridPane>
+                  <Button contentDisplay="TOP" layoutX="393.0" layoutY="29.0" mnemonicParsing="false" onAction="#start" prefHeight="48.0" prefWidth="95.0" text="Generiši" GridPane.columnIndex="2">
+                     <graphic>
+                        <ImageView fitHeight="60.0" fitWidth="60.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../images/PlayPause.png" />
                            </image>
                         </ImageView>
                      </graphic>
