--- a/src/main/resources/view/screen_main.fxml
+++ b/src/main/resources/view/screen_main.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckMenuItem?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
@@ -25,21 +26,17 @@
    <top>
       <MenuBar BorderPane.alignment="CENTER">
         <menus>
-          <Menu mnemonicParsing="false" text="File">
+          <Menu fx:id="fileMenu" mnemonicParsing="false" text="File">
             <items>
-              <MenuItem mnemonicParsing="false" onAction="#openFiles" text="Dodaj datoteke..." />
-                  <MenuItem mnemonicParsing="false" onAction="#openFolder" text="Dodaj direktorijum..." />
+              <MenuItem fx:id="openFilesMenuItem" mnemonicParsing="false" onAction="#openFiles" text="Dodaj datoteke..." />
+                  <MenuItem fx:id="openFolderMenuItem" mnemonicParsing="false" onAction="#openFolder" text="Dodaj direktorijum..." />
             </items>
           </Menu>
-          <Menu mnemonicParsing="false" text="Edit">
-            <items>
-              <MenuItem mnemonicParsing="false" text="Delete" />
-            </items>
-          </Menu>
-          <Menu mnemonicParsing="false" text="Help">
-            <items>
-              <MenuItem mnemonicParsing="false" text="About" />
-            </items>
+          <Menu fx:id="languageMenu" mnemonicParsing="false" text="Language">
+               <items>
+                  <CheckMenuItem mnemonicParsing="false" text="Unspecified Action" />
+                  <CheckMenuItem mnemonicParsing="false" text="Unspecified Action" />
+               </items>
           </Menu>
         </menus>
       </MenuBar>
@@ -83,7 +80,7 @@
                       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                     </rowConstraints>
                      <children>
-                        <Label text="Odaberite jezik:" GridPane.halignment="LEFT" GridPane.valignment="CENTER">
+                        <Label fx:id="chooseAlphabetLabel" text="Odaberite jezik:" GridPane.halignment="LEFT" GridPane.valignment="CENTER">
                            <GridPane.margin>
                               <Insets left="10.0" top="2.0" />
                            </GridPane.margin>
@@ -95,7 +92,7 @@
                                     <ToggleGroup fx:id="lang" />
                                  </toggleGroup>
                               </RadioButton>
-                              <RadioButton mnemonicParsing="false" text="Latinica" toggleGroup="$lang" />
+                              <RadioButton fx:id="latinRadioButton" mnemonicParsing="false" text="Latinica" toggleGroup="$lang" />
                            </children>
                            <GridPane.margin>
                               <Insets left="10.0" />
@@ -117,7 +114,7 @@
                   </GridPane>
                   <BorderPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="5">
                      <top>
-                        <Label text="Konzola:" BorderPane.alignment="CENTER_LEFT" />
+                        <Label fx:id="consoleLabel" text="Konzola:" BorderPane.alignment="CENTER_LEFT" />
                      </top>
                      <padding>
                         <Insets bottom="5.0" left="15.0" right="5.0" />
@@ -130,7 +127,7 @@
                         </ScrollPane>
                      </center>
                   </BorderPane>
-                  <Button fx:id="startButton" contentDisplay="TOP" mnemonicParsing="false" onAction="#start" prefHeight="48.0" prefWidth="95.0" text="Pokreni" GridPane.columnIndex="3" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
+                  <Button fx:id="saveButton" contentDisplay="TOP" mnemonicParsing="false" onAction="#start" prefHeight="48.0" prefWidth="95.0" text="Pokreni" GridPane.columnIndex="3" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
                      <graphic>
                         <ImageView fitHeight="60.0" fitWidth="60.0" pickOnBounds="true" preserveRatio="true">
                            <image>
@@ -171,7 +168,7 @@
                               <Insets left="10.0" />
                            </GridPane.margin>
                         </VBox>
-                        <Label text="Odaberite patern:" GridPane.halignment="LEFT" GridPane.valignment="CENTER">
+                        <Label fx:id="choosePatternLabel" text="Odaberite patern:" GridPane.halignment="LEFT" GridPane.valignment="CENTER">
                            <GridPane.margin>
                               <Insets left="10.0" />
                            </GridPane.margin>
