--- a/src/main/resources/view/screen_main.fxml
+++ b/src/main/resources/view/screen_main.fxml
@@ -142,7 +142,7 @@
                         </BorderPane>
                      </top>
                   </BorderPane>
-                  <Button fx:id="saveButton" contentDisplay="TOP" mnemonicParsing="false" onAction="#start" prefHeight="48.0" prefWidth="95.0" text="Pokreni" GridPane.columnIndex="3" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
+                  <Button fx:id="saveButton" contentDisplay="TOP" mnemonicParsing="false" onAction="#saveFiles" prefHeight="48.0" prefWidth="95.0" text="Pokreni" GridPane.columnIndex="3" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
                      <graphic>
                         <ImageView fitHeight="60.0" fitWidth="60.0" pickOnBounds="true" preserveRatio="true">
                            <image>
