add documentation for MainScreenController

--- a/src/main/resources/view/screen_main.fxml
+++ b/src/main/resources/view/screen_main.fxml
@@ -119,7 +119,7 @@
                      <center>
                         <ScrollPane fx:id="scrollPane" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
                            <content>
-                              <TextFlow fx:id="infoArea" />
+                              <TextFlow fx:id="consoleTextFlow" />
                            </content>
                         </ScrollPane>
                      </center>
